--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.1",
+    "@prisma/client": "^6.19.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
+    "dayjs": "^1.11.19",
+    "filesize": "^11.0.13",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "next-cloudinary": "^6.17.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.5.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "prettier-plugin-prisma": "^5.0.0",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
