--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "16.0.3",
     "next-cloudinary": "^6.17.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
